[gd_scene load_steps=8 format=2]

[ext_resource path="res://Scripts/Menus/MainMenu.gd" type="Script" id=1]
[ext_resource path="res://Fonts/Prompt-BoldItalic.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Fonts/Prompt.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://Scenes/Menus/OptionsMenu.tscn" type="PackedScene" id=4]
[ext_resource path="res://Scenes/Menus/ExitVerfication.tscn" type="PackedScene" id=5]

[sub_resource type="DynamicFont" id=1]

size = 120
use_mipmaps = false
use_filter = false
font_data = ExtResource( 2 )
_sections_unfolded = [ "Extra Spacing", "Font", "Settings" ]

[sub_resource type="DynamicFont" id=2]

size = 48
use_mipmaps = false
use_filter = false
font_data = ExtResource( 3 )
_sections_unfolded = [ "Settings" ]

[node name="MainMenu" type="ColorRect"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -2.0
margin_bottom = -2.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
color = Color( 0.046875, 0.046875, 0.046875, 1 )
script = ExtResource( 1 )

[node name="Label" type="Label" parent="." index="0"]

visible = false
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 0.0
margin_top = 100.0
margin_bottom = 182.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.867188, 0.746774, 0.630066, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "Firelight"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Margin", "custom_fonts" ]

[node name="PauseMenuRect" type="ColorRect" parent="." index="1"]

anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -170.0
margin_top = -100.0
margin_right = 170.0
margin_bottom = 200.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
color = Color( 0.109375, 0.109375, 0.109375, 1 )
_sections_unfolded = [ "Margin", "Rect", "Visibility" ]

[node name="VBoxContainer" type="VBoxContainer" parent="PauseMenuRect" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 10.0
margin_bottom = 82.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
alignment = 0
_sections_unfolded = [ "Margin", "Rect" ]

[node name="StartContainer" type="CenterContainer" parent="PauseMenuRect/VBoxContainer" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 340.0
margin_bottom = 90.0
rect_min_size = Vector2( 300, 90 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
use_top_left = false
_sections_unfolded = [ "Rect" ]

[node name="StartButton" type="Button" parent="PauseMenuRect/VBoxContainer/StartContainer" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 20.0
margin_top = 10.0
margin_right = 320.0
margin_bottom = 80.0
rect_min_size = Vector2( 300, 70 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_fonts/font = SubResource( 2 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Start"
flat = false
align = 1
_sections_unfolded = [ "Margin", "Rect" ]

[node name="OptionsContainer" type="CenterContainer" parent="PauseMenuRect/VBoxContainer" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 94.0
margin_right = 340.0
margin_bottom = 184.0
rect_min_size = Vector2( 300, 90 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
use_top_left = false
_sections_unfolded = [ "Rect" ]

[node name="OptionsButton" type="Button" parent="PauseMenuRect/VBoxContainer/OptionsContainer" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 20.0
margin_top = 10.0
margin_right = 320.0
margin_bottom = 80.0
rect_min_size = Vector2( 300, 70 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_fonts/font = SubResource( 2 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Options"
flat = false
align = 1
_sections_unfolded = [ "Margin", "Rect" ]

[node name="ExitContainer" type="CenterContainer" parent="PauseMenuRect/VBoxContainer" index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 188.0
margin_right = 340.0
margin_bottom = 278.0
rect_min_size = Vector2( 300, 90 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
use_top_left = false
_sections_unfolded = [ "Rect" ]

[node name="ExitButton" type="Button" parent="PauseMenuRect/VBoxContainer/ExitContainer" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 20.0
margin_top = 10.0
margin_right = 320.0
margin_bottom = 80.0
rect_min_size = Vector2( 300, 70 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_fonts/font = SubResource( 2 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Exit"
flat = false
align = 1
_sections_unfolded = [ "Margin", "Rect" ]

[node name="OptionsMenu" parent="." index="2" instance=ExtResource( 4 )]

[node name="ExitVerfication" parent="." index="3" instance=ExtResource( 5 )]

[connection signal="button_up" from="PauseMenuRect/VBoxContainer/StartContainer/StartButton" to="." method="_on_StartButton_button_up"]

[connection signal="button_up" from="PauseMenuRect/VBoxContainer/OptionsContainer/OptionsButton" to="." method="_on_OptionsButton_button_up"]

[connection signal="button_up" from="PauseMenuRect/VBoxContainer/ExitContainer/ExitButton" to="." method="_on_ExitButton_button_up"]


